--- a/templates/layout/home.twig
+++ b/templates/layout/home.twig
@@ -18,7 +18,8 @@
 
     <div class="container">
         <header class="row">
-            <h3>EMPLEADOS</h3>
+            <h4>HOME</h4>
+            <a href="{{ baseUrl() }}/empleados/listar   ">Lista de Empleados</a>
         </header>
 
         {% block content %}{% endblock %}
